# TPBigProject

./: Army.cpp  Army.h  CMakeLists.txt  Constants.h  Factory.cpp  Factory.h  README.md  Solder.cpp  Solder.h  description.txt  help.txt  main.cpp
